Pulse button added

--- a/Proxy Checker/Proxy Checker.csproj
+++ b/Proxy Checker/Proxy Checker.csproj
@@ -7,4 +7,8 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="PulseButton" Version="1.0.3" />
+  </ItemGroup>
+
 </Project>
